--- a/css/style-contact.css
+++ b/css/style-contact.css
@@ -164,6 +164,7 @@ span {
     justify-content: center;
 }
 
+/* Parent container styling for the contact section */
 
 .contact-parent{
     background: rgb(113,113,113);
@@ -175,14 +176,14 @@ span {
     box-shadow:15px 15px 4px rgba(0, 0, 0, 0.25);
     border: 0.5px solid var(--strong-color);
 }
-
+/* Styling for child containers within the contact section */
 .contact-child{
     display:flex;
     flex: 1;
     box-shadow:0px 0px 10px -2px rgba(0,0,0,0.75);
 }
 
-
+/* Styling the first child */ 
 .child1{
     background-image:url("../images/contact.webp");
     background-size:cover;
@@ -193,36 +194,42 @@ span {
     padding:100px 0;
 }
 
+/* Styling all h4 ( headers) on first child */
 .child1 h4{
     padding-left:20%;
     font-size:20px;
     text-shadow:0px 0px 2px #000;
     font-family: var(--font-type);
 }
+/* span styling inside the first child */
 
 .child1 h4 span{
     font-size:16px;
     color: var(--strong-color);
     font-family: var(--font-type);
 }
+/* Second child for the form */
 
 .child2{
     flex-direction:column;
     justify-content:space-around;
     align-items:center;
 }
-
+/* Styling the inside contents of the form */
 .inside-contact{
     width:90%;
     margin:0 auto;
 }
 
+/* styling the headers of the Form */
 .inside-contact h2{
     text-transform:uppercase;
     text-align:center;
     margin-top:50px;
     color: var(--strong-color);
 }
+/* Styling labels */
+
 .inside-contact label{
     text-transform:uppercase;
     color: var(--strong-color);
@@ -234,7 +241,7 @@ span {
     text-align:center;
     font-size:16px;
 }
-
+/* styling for input fields and textarea ( messages)*/
 .inside-contact input, .inside-contact textarea{
     width: 100%;
     font-family: var(--font-type);
@@ -246,7 +253,7 @@ span {
     align-items: center;
     color: #000;
 }
-
+/* submit button styling */
 .inside-contact input[type=submit]{
     background-color:var(--strong-color);
     color: black;
@@ -262,7 +269,7 @@ span {
     transition:0.2s;
 }
 
-
+/* Styling the footer */
 footer {
     grid-area: footer;
     display: flex;
@@ -272,6 +279,7 @@ footer {
     box-shadow:0px 0px 30px  30px rgba(0, 0, 0, 0.25);
 
 }
+/* Styling the footer title */
 
 .footer-title {
     width: 355px;
@@ -427,7 +435,7 @@ footer {
     }
 }
 
-/* Contact Responsive */
+/* Contact Responsive for 900px*/
 @media screen and (max-width:900px){
     .contact-parent{
         display:block;
