--- a/css/style-about.css
+++ b/css/style-about.css
@@ -11,9 +11,8 @@
 }
 /* styles for the body of the web */
 body {
-    max-width: auto;
     background: rgb(25,6,81);
-background: linear-gradient(221deg, rgba(25,6,81,1) 11%, rgba(9,9,121,1) 50%, rgba(82,82,82,1) 91%);
+    background: linear-gradient(221deg, rgba(25,6,81,1) 11%, rgba(9,9,121,1) 50%, rgba(82,82,82,1) 91%);
     display: grid;
     grid-template-columns: 75% 25%;
     grid-template-rows: 120px 120px 1fr 300px;
@@ -166,7 +165,7 @@ span {
     justify-content: center;
 }
 
-.contact-parent{
+.content-parent{
     display:flex;
     flex: 1;
     justify-content: center;
@@ -176,7 +175,7 @@ span {
 
 }
 
-.contact-child{
+.content-child{
     display:flex;
     flex: 1;
 
@@ -191,12 +190,12 @@ span {
     opacity: 0.7;
 }
 
-.inside-contact{
+.main-contents {
     width:90%;
     margin:0 auto;
 }
 
-.inside-contact h2 {
+.main-contents h2 {
     width: 300px;
     color:#d6e6f2;
     text-shadow: 15px 15px 4px rgba(0, 0, 0, 0.10);
@@ -207,7 +206,7 @@ span {
     margin-top: 20px;
     padding: 20px;
 }
-.inside-contact p {
+.main-contents p {
     font-family: var(--font-type);
     font-weight: 100;
     color:#d6e6f2;
@@ -402,7 +401,7 @@ footer {
 
 
 @media screen and (max-width:900px){
-    .contact-parent{
+    .content-parent{
         display:block;
         width: 100%;
     }
