--- a/css/style-info.css
+++ b/css/style-info.css
@@ -31,7 +31,7 @@ header {
     display: grid;
     grid-template-columns: 5% 50% 45%;
     grid-template-areas: "logo main-title top-nav";
-    border-bottom: 1px  solid var(--line-color);
+    border-bottom: 1px  solid var(--strong-color);
     box-shadow:15px 15px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -248,8 +248,8 @@ footer {
     grid-area: footer;
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px  solid var(--line-color);
-    border-top: 1px solid var(--line-color);
+    border-bottom: 1px  solid var(--strong-color);
+    border-top: 1px solid var(--strong-color);
     box-shadow:0px 0px 30px 30px rgba(0, 0, 0, 0.25);
 
 }
