--- a/css/style-info.css
+++ b/css/style-info.css
@@ -170,7 +170,7 @@ span {
     flex: 1;
     justify-content: center;
     margin: 80px;
-    border: 1px solid var(--line-color);
+    border: 1px solid var(--strong-color);
     box-shadow:15px 15px 4px rgba(0, 0, 0, 0.25);
 
 }
