--- a/css/style-info.css
+++ b/css/style-info.css
@@ -407,14 +407,6 @@ footer {
         padding: 5px;
     }
 
-    .child1 iframe{
-    display:flex;
-    justify-content:space-around;
-    color:#fff;
-    margin: 0;
-    width: 500px;
-    opacity: 0.7;
-}
 
 }
 
@@ -432,7 +424,7 @@ footer {
     
     .child1
     {
-        margin: 0;
-        padding: 0;
+        display: none;
+
     }
 }
