--- a/style-galerie.css
+++ b/style-galerie.css
@@ -1,4 +1,3 @@
-/* Reset all elements margin*/
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +6,6 @@
 :root {
     --strong-color: rgb(255, 183, 0); 
     --font-type: 'Merriweather';
-    --line-color: #d52121;
 }
 /* styles for the body of the web */
 body {
@@ -32,6 +30,7 @@ header {
     grid-template-columns: 5% 50% 45%;
     grid-template-areas: "logo main-title top-nav";
     border-bottom: 1px  solid var(--strong-color);
+    border-top: 1px solid var(--strong-color);
     box-shadow:15px 15px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -52,7 +51,7 @@ header {
     color: #FFF;
     text-shadow: 15px 15px 4px rgba(0, 0, 0, 0.25);
     font-family: 'Merriweather', serif;
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 500;
     margin-top: 100px;
     margin-left: 5px;
@@ -100,7 +99,7 @@ span {
 .top-menu a:hover {
     font-family: var(--font-type);
     color: #d6e6f2;
-    background-color: var(--strong-color);
+    background-color:var(--strong-color);
     letter-spacing: 3px;
     box-shadow: 10px 10px 40px -10px rgba(0,0,0,0.57);
     border-style: solid;
@@ -122,7 +121,7 @@ span {
     grid-area: navigation;
     width: 930px;
     height: 157px;
-    margin-left: 450px;
+    margin-left: 500px;
     margin-top: 200px;
     display: grid;
     grid-template-columns: 100px 100px 100px;
@@ -156,93 +155,31 @@ span {
     opacity: 0.7;
 }
 
-/* Style for the Main Contact */
-.content {
+.wrapper {
     grid-area: content-main;
-    height: 700px;
-    margin-top: 150px;
+    height: 800px;
+    margin-top: 250px;
     display: flex;
     justify-content: center;
+
 }
 
-.content-parent{
-    display:flex;
-    flex: 1;
-    justify-content: center;
-    margin: 80px;
-    border: 1px solid var(--strong-color);
+.wrapper-content {
+    background: linear-gradient(-180deg, #BCC5CE 0%, #929EAD 98%), radial-gradient(at top left, rgba(255,255,255,0.30) 0%, rgba(0,0,0,0.30) 100%);
+    background-blend-mode: screen;
+    display: block;
+    margin:100px;
     box-shadow:15px 15px 4px rgba(0, 0, 0, 0.25);
+    border: 0.5px solid var(--strong-color);
 
 }
 
-.content-child {
-    display:flex;
-    flex: 1;
-
-
-}
-
-.child1 {
-    background-image: url(../images/messe-basel.webp);
-    background-size: cover;
-    display:flex;
-    flex-direction:column;
-    justify-content:space-around;
-    color:#fff;
-    padding:100px 0;
-}
-
-.child1 h4{
-    padding-left:20%;
-    font-size:20px;
-    text-shadow:0px 0px 2px #000;
-    font-family: var(--font-type);
-}
-
-.child1 h4 span{
-    font-size:16px;
-    color: var(--strong-color);
-    font-family: var(--font-type);
-}
-
-.table-content {
-    width:90%;
-    margin:0 auto;
-    overflow-x:auto
-}
-
-.table-content table {
-    font-family: var(--font-type);
-    font-weight: 100;
-    color:#d6e6f2;
-    justify-content: center;
-    padding: 20px;
-    margin: 20px;
-    border: none;
-}
-
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 90%;
-}
-
-td, th {
-    border: 1px solid var(--strong-color);
-    text-align: center;
-    padding: 8px;
-}
-
-.links  a {
-    color: var(--strong-color);
-    font-family: var(--font-type);
+.img-content img {
+    width: 600px;
+    height: 600px;
 
 }
 
-.links a:hover {
-    color: var(--strong-color);
-    text-decoration: none;
-}
 
 footer {
     grid-area: footer;
@@ -250,7 +187,7 @@ footer {
     justify-content: space-between;
     border-bottom: 1px  solid var(--strong-color);
     border-top: 1px solid var(--strong-color);
-    box-shadow:0px 0px 30px 30px rgba(0, 0, 0, 0.25);
+    box-shadow:0px 0px 30px  30px rgba(0, 0, 0, 0.25);
 
 }
 
@@ -404,25 +341,34 @@ footer {
 
     .footer-logos li {
     margin-right: 20px;
-    padding: 5px;
+        padding: 5px;
     }
-
 }
 
 @media screen and (max-width:900px){
-    .content-parent{
+
+    .wrapper-content {
         display:block;
+        width: 100%;
+        height: fit-content;
         margin: 15px;
-        font-size: 11px;  
+        margin-top: 0;
     }
 
-    .table-content table {
-        font-weight: 900;
-    }
 
-    .child1
-    {
-        display: none;
+    .img-content img {
+    width: 100%;
+    height: auto;
 
-    }
+
+}
+
+.wrapper {
+    grid-area: content-main;
+    height: 600px;
+    margin-top: 250px;
+    display: flex;
+    justify-content: center;
+
+}
 }
